Updated the slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -129,6 +129,9 @@ supervisor.slots.ports:
     - 6701
     - 6702
     - 6703
+drpc.servers:
+- "127.0.0.1"
+drpc.port: 12345
     </pre>
     <li>And then finally you can run Storm like so</li>
     <pre>
